<?xml version="1.0"?>
<package format="2">
  <name>Robot_2D_navigation</name>
  <version>0.0.0</version>
  <description>The Robot_2D_navigation package</description>

  <maintainer email="Ramune6110@todo.todo">Ramune6110</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>move_base</build_depend>
  <build_export_depend>move_base</build_export_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>

  <export></export>
</package>
