<?xml version="1.0"?>
<package format="2">
  <name>Robot_Odometry</name>
  <version>0.0.0</version>
  <description>The Robot_Odometry package</description>

  <maintainer email="Ramune6110@todo.todo">Ramune6110</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>

  <export></export>
</package>
